--- a/src/coronaprojekt/KallaTillMote.form
+++ b/src/coronaprojekt/KallaTillMote.form
@@ -361,6 +361,9 @@
         <Property name="columns" type="int" value="5"/>
         <Property name="text" type="java.lang.String" value="07:15"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfTidFranActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
